kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: wheeler-blog-server
  template:
    metadata:
      labels:
        component: wheeler-blog-server
    spec:
      containers:
        - name: wheeler-blog-server
          image: wheelerthegreat/wheeler_blog-api
          ports:
            - containerPort: 8000
