kubernetes/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wheeler-blog-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: wheeler-blog-server
  ports:
    - port: 3004
      targetPort: 3001
