kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - wheeler-blog.com
      secretName: wheeler-blog-com
  rules:
    - host: wheeler-blog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wheeler-blog-cluster-ip-service
                port:
                  number: 3004
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: wheeler-blog-cluster-ip-service
                port: 
                  number: 3004
